--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "canalstreetmarket",
+  "name": "street-market",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,14 +11,17 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@hookform/resolvers": "^3.1.0",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.15",
     "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-router-dom": "^6.8.2",
     "sass": "^1.58.3",
-    "swiper": "^9.2.0"
+    "swiper": "^9.2.0",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
