--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-router-dom": "^6.8.2",
     "sass": "^1.58.3",
     "swiper": "^9.2.0",
-    "yup": "^1.1.1"
+    "yup": "^1.1.1",
+    "zustand": "^4.3.7"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
